Fix button not visibile on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -737,7 +737,7 @@ footer {
 
   .brain-container {
     padding: 10px;
-    padding-bottom: max(20px, env(safe-area-inset-bottom));
+    padding-bottom: max(40px, env(safe-area-inset-bottom));
   }
 
   #brain-svg-container {
@@ -745,7 +745,7 @@ footer {
   }
 
   #brain-svg-container svg {
-    max-height: calc(100vh - 220px);
+    max-height: calc(100vh - 280px);
   }
 
   .controls {
